# esp-idf-matter

./: Cargo.toml  README.md
.cargo/: config.toml
.github/configs/: sdkconfig.defaults
.github/workflows/: ci.yml
examples/: light_eth.rs  light_eth2.rs  light_thread.rs  light_wifi.rs  light_wifi_persistent.rs
src/: ble.rs  lib.rs  netif.rs  thread.rs  wifi.rs  wireless.rs
src/wireless/: thread.rs  wifi.rs
