[package]
name = "esp-idf-matter"
version = "0.1.0"
authors = ["ivmarkov <ivan.markov@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["matter", "embedded", "esp-idf", "esp32"]
description = "Run rs-matter on Espressif chips with ESP IDF"
repository = "https://github.com/sysgrok/esp-idf-matter"
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
rust-version = "1.84"

#[lib]
#harness = false

[patch.crates-io]
#rs-matter = { git = "https://github.com/project-chip/rs-matter" }
rs-matter = { git = "https://github.com/sysgrok/rs-matter", branch = "next" }
#rs-matter = { path = "../rs-matter/rs-matter" }
rs-matter-stack = { git = "https://github.com/sysgrok/rs-matter-stack", branch = "next" }
#rs-matter-stack = { path = "../rs-matter-stack" }
#edge-nal = { git = "https://github.com/sysgrok/edge-net" }
#edge-nal-std = { git = "https://github.com/sysgrok/edge-net" }
#edge-mdns = { git = "https://github.com/sysgrok/edge-net" }
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
#default = ["std", "log", "rustcrypto"]
default = ["std", "async-io-mini", "log", "rustcrypto"]

# Sizing

# Number of subscriptions
max-subscriptions-32 = ["rs-matter-stack/max-subscriptions-32"]
max-subscriptions-16 = ["rs-matter-stack/max-subscriptions-16"]
max-subscriptions-8 = ["rs-matter-stack/max-subscriptions-8"]
max-subscriptions-7 = ["rs-matter-stack/max-subscriptions-7"]
max-subscriptions-6 = ["rs-matter-stack/max-subscriptions-6"]
max-subscriptions-5 = ["rs-matter-stack/max-subscriptions-5"]
max-subscriptions-4 = ["rs-matter-stack/max-subscriptions-4"]
max-subscriptions-3 = ["rs-matter-stack/max-subscriptions-3"] # default
max-subscriptions-2 = ["rs-matter-stack/max-subscriptions-2"]
max-subscriptions-1 = ["rs-matter-stack/max-subscriptions-1"]

# Number of IM buffers
max-im-buffers-64 = ["rs-matter-stack/max-im-buffers-64"]
max-im-buffers-32 = ["rs-matter-stack/max-im-buffers-32"]
max-im-buffers-16 = ["rs-matter-stack/max-im-buffers-16"]
max-im-buffers-10 = ["rs-matter-stack/max-im-buffers-10"] # default
max-im-buffers-9 = ["rs-matter-stack/max-im-buffers-9"]
max-im-buffers-8 = ["rs-matter-stack/max-im-buffers-8"]
max-im-buffers-7 = ["rs-matter-stack/max-im-buffers-7"]
max-im-buffers-6 = ["rs-matter-stack/max-im-buffers-6"]
max-im-buffers-5 = ["rs-matter-stack/max-im-buffers-5"]
max-im-buffers-4 = ["rs-matter-stack/max-im-buffers-4"]

# Number of responders
max-responders-32 = ["rs-matter-stack/max-responders-32"]
max-responders-16 = ["rs-matter-stack/max-responders-16"]
max-responders-8 = ["rs-matter-stack/max-responders-8"]
max-responders-7 = ["rs-matter-stack/max-responders-7"]
max-responders-6 = ["rs-matter-stack/max-responders-6"]
max-responders-5 = ["rs-matter-stack/max-responders-5"]
max-responders-4 = ["rs-matter-stack/max-responders-4"] # default
max-responders-3 = ["rs-matter-stack/max-responders-3"]
max-responders-2 = ["rs-matter-stack/max-responders-2"]
max-responders-1 = ["rs-matter-stack/max-responders-1"]

# Sizing / rs-matter

# Number of fabrics
max-fabrics-32 = ["rs-matter-stack/max-fabrics-32"]
max-fabrics-16 = ["rs-matter-stack/max-fabrics-16"]
max-fabrics-8 = ["rs-matter-stack/max-fabrics-8"]
max-fabrics-7 = ["rs-matter-stack/max-fabrics-7"]
max-fabrics-6 = ["rs-matter-stack/max-fabrics-6"]
max-fabrics-5 = ["rs-matter-stack/max-fabrics-5"]
max-fabrics-4 = ["rs-matter-stack/max-fabrics-4"]
max-fabrics-3 = ["rs-matter-stack/max-fabrics-3"] # default
max-fabrics-2 = ["rs-matter-stack/max-fabrics-2"]
max-fabrics-1 = ["rs-matter-stack/max-fabrics-1"]

# Number of ACL entries per fabric
max-acls-per-fabric-32 = ["rs-matter-stack/max-acls-per-fabric-32"]
max-acls-per-fabric-16 = ["rs-matter-stack/max-acls-per-fabric-16"]
max-acls-per-fabric-8 = ["rs-matter-stack/max-acls-per-fabric-8"]
max-acls-per-fabric-7 = ["rs-matter-stack/max-acls-per-fabric-7"]
max-acls-per-fabric-6 = ["rs-matter-stack/max-acls-per-fabric-6"]
max-acls-per-fabric-5 = ["rs-matter-stack/max-acls-per-fabric-5"]
max-acls-per-fabric-4 = ["rs-matter-stack/max-acls-per-fabric-4"] # default
max-acls-per-fabric-3 = ["rs-matter-stack/max-acls-per-fabric-3"]
max-acls-per-fabric-2 = ["rs-matter-stack/max-acls-per-fabric-3"]
max-acls-per-fabric-1 = ["rs-matter-stack/max-acls-per-fabric-1"]

# Number of subjects per ACL entry
max-subjects-per-acl-32 = ["rs-matter-stack/max-subjects-per-acl-32"]
max-subjects-per-acl-16 = ["rs-matter-stack/max-subjects-per-acl-16"]
max-subjects-per-acl-8 = ["rs-matter-stack/max-subjects-per-acl-8"]
max-subjects-per-acl-7 = ["rs-matter-stack/max-subjects-per-acl-7"]
max-subjects-per-acl-6 = ["rs-matter-stack/max-subjects-per-acl-6"]
max-subjects-per-acl-5 = ["rs-matter-stack/max-subjects-per-acl-5"]
max-subjects-per-acl-4 = ["rs-matter-stack/max-subjects-per-acl-4"] # default
max-subjects-per-acl-3 = ["rs-matter-stack/max-subjects-per-acl-3"]
max-subjects-per-acl-2 = ["rs-matter-stack/max-subjects-per-acl-2"]
max-subjects-per-acl-1 = ["rs-matter-stack/max-subjects-per-acl-1"]

# Number of targets per ACL entry
max-targets-per-acl-32 = ["rs-matter-stack/max-targets-per-acl-32"]
max-targets-per-acl-16 = ["rs-matter-stack/max-targets-per-acl-16"]
max-targets-per-acl-8 = ["rs-matter-stack/max-targets-per-acl-8"]
max-targets-per-acl-7 = ["rs-matter-stack/max-targets-per-acl-7"]
max-targets-per-acl-6 = ["rs-matter-stack/max-targets-per-acl-6"]
max-targets-per-acl-5 = ["rs-matter-stack/max-targets-per-acl-5"]
max-targets-per-acl-4 = ["rs-matter-stack/max-targets-per-acl-4"]
max-targets-per-acl-3 = ["rs-matter-stack/max-targets-per-acl-3"] # default
max-targets-per-acl-2 = ["rs-matter-stack/max-targets-per-acl-2"]
max-targets-per-acl-1 = ["rs-matter-stack/max-targets-per-acl-1"]

# Number of sessions
max-sessions-64 = ["rs-matter-stack/max-sessions-64"]
max-sessions-32 = ["rs-matter-stack/max-sessions-32"]
max-sessions-16 = ["rs-matter-stack/max-sessions-16"] # default
max-sessions-8 = ["rs-matter-stack/max-sessions-8"]
max-sessions-7 = ["rs-matter-stack/max-sessions-7"]
max-sessions-6 = ["rs-matter-stack/max-sessions-6"]
max-sessions-5 = ["rs-matter-stack/max-sessions-5"]
max-sessions-4 = ["rs-matter-stack/max-sessions-4"]
max-sessions-3 = ["rs-matter-stack/max-sessions-3"]

# Number of exchanges per session
max-exchanges-per-session-16 = ["rs-matter-stack/max-exchanges-per-session-16"]
max-exchanges-per-session-8 = ["rs-matter-stack/max-exchanges-per-session-8"]
max-exchanges-per-session-7 = ["rs-matter-stack/max-exchanges-per-session-7"]
max-exchanges-per-session-6 = ["rs-matter-stack/max-exchanges-per-session-6"]
max-exchanges-per-session-5 = ["rs-matter-stack/max-exchanges-per-session-5"] # default
max-exchanges-per-session-4 = ["rs-matter-stack/max-exchanges-per-session-4"]
max-exchanges-per-session-3 = ["rs-matter-stack/max-exchanges-per-session-3"]

# General
async-io-mini = ["std", "edge-nal-std/async-io-mini"]
std = ["esp-idf-svc/std", "edge-nal-std", "rs-matter-stack/std", "rs-matter-stack/log"]
log = ["rs-matter-stack/log"]
rustcrypto = ["rs-matter-stack/rustcrypto"]
mbedtls = ["rs-matter-stack/mbedtls"]

# Enable only when building the examples
examples = [
    "default", 
    "esp-idf-svc/binstart", 
    "esp-idf-svc/critical-section",
    "max-fabrics-2",
]

[dependencies]
log = { version = "0.4", default-features = false }
heapless = "0.9"
enumset = { version = "1", default-features = false }
embassy-futures = "0.1"
embassy-sync = "0.7"
embassy-time = "0.5"
esp-idf-svc = { version = "0.51", default-features = false, features = ["alloc", "embassy-time-driver", "experimental"] }
embedded-svc = { version = "0.28", default-features = false }
rs-matter-stack = { version = "0.1", default-features = false }
async-io = { version = "=2.0.0", default-features = false } # Workaround for https://github.com/smol-rs/async-lock/issues/84
edge-nal = "0.6"
edge-nal-std = { version = "0.6", default-features = false, optional = true }

[build-dependencies]
embuild = "0.33"

[dev-dependencies]
embassy-time-queue-utils = { version = "0.3", features = ["generic-queue-64"] }
static_cell = "2.1"
anyhow = "1"
rand = "0.8"

[[example]]
name = "light_wifi"
path = "examples/light_wifi.rs"
required-features = ["examples"]

[[example]]
name = "light_thread"
path = "examples/light_thread.rs"
required-features = ["examples"]

[[example]]
name = "light_eth"
path = "examples/light_eth.rs"
required-features = ["examples"]

[[example]]
name = "light_eth2"
path = "examples/light_eth2.rs"
required-features = ["examples"]
