[package]
name = "esp-idf-matter"
version = "0.1.0"
authors = ["ivmarkov <ivan.markov@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["matter", "embedded", "esp-idf", "esp32"]
description = "Run rs-matter on Espressif chips with ESP IDF"
repository = "https://github.com/sysgrok/esp-idf-matter"
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
rust-version = "1.84"

#[lib]
#harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "s"

[patch.crates-io]
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }

[features]
default = ["async-io-mini", "rustcrypto"]

# Sizing

# Number of subscriptions.
max-subscriptions-32 = ["rs-matter-stack/max-subscriptions-32"]
max-subscriptions-16 = ["rs-matter-stack/max-subscriptions-16"]
max-subscriptions-8 = ["rs-matter-stack/max-subscriptions-8"]
max-subscriptions-7 = ["rs-matter-stack/max-subscriptions-7"]
max-subscriptions-6 = ["rs-matter-stack/max-subscriptions-6"]
max-subscriptions-5 = ["rs-matter-stack/max-subscriptions-5"]
max-subscriptions-4 = ["rs-matter-stack/max-subscriptions-4"]
# Default number of subscriptions.
max-subscriptions-3 = ["rs-matter-stack/max-subscriptions-3"]
max-subscriptions-2 = ["rs-matter-stack/max-subscriptions-2"]
max-subscriptions-1 = ["rs-matter-stack/max-subscriptions-1"]

# Events ring-bffers' size.
events-ringbuf-size-0 = ["rs-matter-stack/events-ringbuf-size-0"]
events-ringbuf-size-64 = ["rs-matter-stack/events-ringbuf-size-64"]
events-ringbuf-size-128 = ["rs-matter-stack/events-ringbuf-size-128"]
# Default events ring-buffers' size.
events-ringbuf-size-256 = ["rs-matter-stack/events-ringbuf-size-256"]
events-ringbuf-size-512 = ["rs-matter-stack/events-ringbuf-size-512"]
events-ringbuf-size-1024 = ["rs-matter-stack/events-ringbuf-size-1024"]
events-ringbuf-size-2048 = ["rs-matter-stack/events-ringbuf-size-2048"]

# Number of packet buffers.
max-im-buffers-64 = ["rs-matter-stack/max-im-buffers-64"]
max-im-buffers-32 = ["rs-matter-stack/max-im-buffers-32"]
max-im-buffers-16 = ["rs-matter-stack/max-im-buffers-16"]
# Default number of packet buffers.
max-im-buffers-10 = ["rs-matter-stack/max-im-buffers-10"]
max-im-buffers-9 = ["rs-matter-stack/max-im-buffers-9"]
max-im-buffers-8 = ["rs-matter-stack/max-im-buffers-8"]
max-im-buffers-7 = ["rs-matter-stack/max-im-buffers-7"]
max-im-buffers-6 = ["rs-matter-stack/max-im-buffers-6"]
max-im-buffers-5 = ["rs-matter-stack/max-im-buffers-5"]
max-im-buffers-4 = ["rs-matter-stack/max-im-buffers-4"]

# Number of responders.
max-responders-32 = ["rs-matter-stack/max-responders-32"]
max-responders-16 = ["rs-matter-stack/max-responders-16"]
max-responders-8 = ["rs-matter-stack/max-responders-8"]
max-responders-7 = ["rs-matter-stack/max-responders-7"]
max-responders-6 = ["rs-matter-stack/max-responders-6"]
max-responders-5 = ["rs-matter-stack/max-responders-5"]
# Default number of responders.
max-responders-4 = ["rs-matter-stack/max-responders-4"]
max-responders-3 = ["rs-matter-stack/max-responders-3"]
max-responders-2 = ["rs-matter-stack/max-responders-2"]
max-responders-1 = ["rs-matter-stack/max-responders-1"]

# Number of fabrics
max-fabrics-32 = ["rs-matter-stack/max-fabrics-32"]
max-fabrics-16 = ["rs-matter-stack/max-fabrics-16"]
max-fabrics-8 = ["rs-matter-stack/max-fabrics-8"]
max-fabrics-7 = ["rs-matter-stack/max-fabrics-7"]
max-fabrics-6 = ["rs-matter-stack/max-fabrics-6"]
# Default number of fabrics (Matter requires a minimum of 5 fabrics).
max-fabrics-5 = ["rs-matter-stack/max-fabrics-5"]
max-fabrics-4 = ["rs-matter-stack/max-fabrics-4"]
max-fabrics-3 = ["rs-matter-stack/max-fabrics-3"]
max-fabrics-2 = ["rs-matter-stack/max-fabrics-2"]
max-fabrics-1 = ["rs-matter-stack/max-fabrics-1"]

# Number of groups per fabrics.
max-groups-per-fabric-32 = ["rs-matter-stack/max-groups-per-fabric-32"]
max-groups-per-fabric-16 = ["rs-matter-stack/max-groups-per-fabric-16"]
max-groups-per-fabric-12 = ["rs-matter-stack/max-groups-per-fabric-12"]
max-groups-per-fabric-8 = ["rs-matter-stack/max-groups-per-fabric-8"]
max-groups-per-fabric-7 = ["rs-matter-stack/max-groups-per-fabric-7"]
max-groups-per-fabric-6 = ["rs-matter-stack/max-groups-per-fabric-6"]
max-groups-per-fabric-5 = ["rs-matter-stack/max-groups-per-fabric-5"]
# Default number of groups per fabric (Matter requires a minimum of 4 group table entries per fabric).
max-groups-per-fabric-4 = ["rs-matter-stack/max-groups-per-fabric-4"]

# Number of group keys per fabric.
max-group-keys-per-fabric-5 = ["rs-matter-stack/max-group-keys-per-fabric-5"]
max-group-keys-per-fabric-4 = ["rs-matter-stack/max-group-keys-per-fabric-4"]
# Default number of group keys per fabric (Matter requires a minimum of 1 group keys per fabric).
max-group-keys-per-fabric-3 = ["rs-matter-stack/max-group-keys-per-fabric-3"]
max-group-keys-per-fabric-2 = ["rs-matter-stack/max-group-keys-per-fabric-2"]

# Number of endpoints that can be members of a group (per fabric).
max-group-endpoints-per-fabric-5 = ["rs-matter-stack/max-group-endpoints-per-fabric-5"]
max-group-endpoints-per-fabric-4 = ["rs-matter-stack/max-group-endpoints-per-fabric-4"]
# Default number of endpoints that can be members of a group (per fabric).
max-group-endpoints-per-fabric-3 = ["rs-matter-stack/max-group-endpoints-per-fabric-3"]
max-group-endpoints-per-fabric-2 = ["rs-matter-stack/max-group-endpoints-per-fabric-2"]
max-group-endpoints-per-fabric-1 = ["rs-matter-stack/max-group-endpoints-per-fabric-1"]

# Number of ACL entries per fabric.
max-acls-per-fabric-32 = ["rs-matter-stack/max-acls-per-fabric-32"]
max-acls-per-fabric-16 = ["rs-matter-stack/max-acls-per-fabric-16"]
max-acls-per-fabric-8 = ["rs-matter-stack/max-acls-per-fabric-8"]
max-acls-per-fabric-7 = ["rs-matter-stack/max-acls-per-fabric-7"]
max-acls-per-fabric-6 = ["rs-matter-stack/max-acls-per-fabric-6"]
max-acls-per-fabric-5 = ["rs-matter-stack/max-acls-per-fabric-5"]
# Default number of ACL entries per fabric (Matter requires a minimum of 3 ACL entries per fabric).
max-acls-per-fabric-4 = ["rs-matter-stack/max-acls-per-fabric-4"]
max-acls-per-fabric-3 = ["rs-matter-stack/max-acls-per-fabric-3"]
max-acls-per-fabric-2 = ["rs-matter-stack/max-acls-per-fabric-2"]
max-acls-per-fabric-1 = ["rs-matter-stack/max-acls-per-fabric-1"]

# Number of subjects per ACL entry.
max-subjects-per-acl-32 = ["rs-matter-stack/max-subjects-per-acl-32"]
max-subjects-per-acl-16 = ["rs-matter-stack/max-subjects-per-acl-16"]
max-subjects-per-acl-8 = ["rs-matter-stack/max-subjects-per-acl-8"]
max-subjects-per-acl-7 = ["rs-matter-stack/max-subjects-per-acl-7"]
max-subjects-per-acl-6 = ["rs-matter-stack/max-subjects-per-acl-6"]
max-subjects-per-acl-5 = ["rs-matter-stack/max-subjects-per-acl-5"]
# Default number of subjects per ACL entry (Matter requires a minimum of 4 subjects per ACL entry).
max-subjects-per-acl-4 = ["rs-matter-stack/max-subjects-per-acl-4"]
max-subjects-per-acl-3 = ["rs-matter-stack/max-subjects-per-acl-3"]
max-subjects-per-acl-2 = ["rs-matter-stack/max-subjects-per-acl-2"]
max-subjects-per-acl-1 = ["rs-matter-stack/max-subjects-per-acl-1"]

# Number of targets per ACL entry.
max-targets-per-acl-32 = ["rs-matter-stack/max-targets-per-acl-32"]
max-targets-per-acl-16 = ["rs-matter-stack/max-targets-per-acl-16"]
max-targets-per-acl-8 = ["rs-matter-stack/max-targets-per-acl-8"]
max-targets-per-acl-7 = ["rs-matter-stack/max-targets-per-acl-7"]
max-targets-per-acl-6 = ["rs-matter-stack/max-targets-per-acl-6"]
max-targets-per-acl-5 = ["rs-matter-stack/max-targets-per-acl-5"]
max-targets-per-acl-4 = ["rs-matter-stack/max-targets-per-acl-4"]
# Default number of targets per ACL entry (Matter requires a minimum of 3 targets per ACL entry).
max-targets-per-acl-3 = ["rs-matter-stack/max-targets-per-acl-3"]
max-targets-per-acl-2 = ["rs-matter-stack/max-targets-per-acl-2"]
max-targets-per-acl-1 = ["rs-matter-stack/max-targets-per-acl-1"]

# Number of sessions.
max-sessions-64 = ["rs-matter-stack/max-sessions-64"]
max-sessions-32 = ["rs-matter-stack/max-sessions-32"]
# Default number of sessions (Matter requires a minimum of 3 sessions per fabric).
max-sessions-16 = ["rs-matter-stack/max-sessions-16"]
max-sessions-8 = ["rs-matter-stack/max-sessions-8"]
max-sessions-7 = ["rs-matter-stack/max-sessions-7"]
max-sessions-6 = ["rs-matter-stack/max-sessions-6"]
max-sessions-5 = ["rs-matter-stack/max-sessions-5"]
max-sessions-4 = ["rs-matter-stack/max-sessions-4"]
max-sessions-3 = ["rs-matter-stack/max-sessions-3"]

# Number of exchanges per session.
max-exchanges-per-session-16 = ["rs-matter-stack/max-exchanges-per-session-16"]
max-exchanges-per-session-8 = ["rs-matter-stack/max-exchanges-per-session-8"]
max-exchanges-per-session-7 = ["rs-matter-stack/max-exchanges-per-session-7"]
max-exchanges-per-session-6 = ["rs-matter-stack/max-exchanges-per-session-6"]
# Default number of exchanges per session (Matter requires a minimum of 5 exchanges per session).
max-exchanges-per-session-5 = ["rs-matter-stack/max-exchanges-per-session-5"] # default
max-exchanges-per-session-4 = ["rs-matter-stack/max-exchanges-per-session-4"]
max-exchanges-per-session-3 = ["rs-matter-stack/max-exchanges-per-session-3"]

# Size (in bytes) of the key-value persistence scratch buffer owned by `Matter`.
kv-blob-store-65536 = ["rs-matter-stack/kv-blob-store-65536"]
kv-blob-store-32768 = ["rs-matter-stack/kv-blob-store-32768"]
kv-blob-store-16384 = ["rs-matter-stack/kv-blob-store-16384"]
kv-blob-store-8192 = ["rs-matter-stack/kv-blob-store-8192"]
# Default key-value persistence scratch buffer size.
kv-blob-store-4096 = ["rs-matter-stack/kv-blob-store-4096"]
kv-blob-store-2048 = ["rs-matter-stack/kv-blob-store-2048"]
kv-blob-store-1024 = ["rs-matter-stack/kv-blob-store-1024"]

# General

# Use the `async-io-mini` Reactor rather than `async-io` (useful for embedded Rust STD targets like ESP-IDF).
async-io-mini = ["edge-nal-std/async-io-mini"]
# Crypto backend: Rust Crypto.
rustcrypto = ["rs-matter-stack/rustcrypto"]
# Crypto backend: mbedTLS.
mbedtls = ["rs-matter-stack/mbedtls"]
# Enable backtrace capturing (useful for debugging).
backtrace = ["rs-matter-stack/backtrace"]
# Typically enabled when TCP is used.
# When enabled, this feature extends the Transport layer packet buffers, as well as the ones
# served by `MatterBuffers` to 1MB (from 1500 B).
# TODO large-buffers = ["rs-matter-stack/large-buffers"] 

# Enable only when building the examples
examples = [
    "default", 
    "esp-idf-svc/binstart", 
    "esp-idf-svc/critical-section",
    "max-fabrics-2",
]

[dependencies]
log = { version = "0.4", default-features = false }
heapless = "0.9"
enumset = { version = "1", default-features = false }
embassy-futures = "0.1"
embassy-sync = "0.8"
# `esp-idf-hal`'s `EspRawMutex` implements `RawMutex` from embassy-sync 0.7, so
# code that hands `EspRawMutex` to esp-idf-hal / embassy's own `Mutex` must use
# the 0.7 API. rs-matter, however, is on embassy-sync 0.8, so mutexes fed into
# rs-matter's `Signal`/`Mutex`/`Notification` must use the 0.8 `RawMutex`. We
# therefore depend on both, aliasing the 0.7 one as `embassy_sync_07`.
embassy-sync-07 = { package = "embassy-sync", version = "0.7" }
embassy-time = "0.5"
esp-idf-svc = { version = "0.52", default-features = false, features = ["std", "embassy-time-driver", "experimental"] }
rs-matter-stack = { version = "0.1", default-features = false, features = ["std", "log"] }
async-io = { version = "=2.0.0", default-features = false } # Workaround for https://github.com/smol-rs/async-lock/issues/84
edge-nal = "0.7"
edge-nal-std = { version = "0.7", default-features = false }

[build-dependencies]
embuild = "0.33"

[dev-dependencies]
embassy-time-queue-utils = { version = "0.3", features = ["generic-queue-64"] }
static_cell = "2.1"
anyhow = "1"
rand = "0.8"

[[example]]
name = "light_wifi"
path = "examples/light_wifi.rs"
required-features = ["examples"]

[[example]]
name = "light_thread"
path = "examples/light_thread.rs"
required-features = ["examples"]

[[example]]
name = "light_eth"
path = "examples/light_eth.rs"
required-features = ["examples"]

[[example]]
name = "light_eth2"
path = "examples/light_eth2.rs"
required-features = ["examples"]
